# CorneaInterfaceSegmentation

./: .gitignore  README.md  pyproject.toml
cornea/: train.py  trainer_module.py
cornea/data/: datamodule.py
cornea/generate/: corrupt.py
cornea/models/: hf_hubs.py  trainer_module.py
cornea/segment/: interface.py
notebooks/: data.ipynb  segment.ipynb  submit_to_hf.ipynb  test.ipynb
src/cornea/models/: interface.py  segmentation.py
src/cornea/utils/: callbacks.py
